tooling/nargo_cli/tests/snapshots/execution_success/no_predicates_numeric_generic_poseidon/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v3: [[Field; 10]; 2], v4: [u1; 2]):
    (no terminator instruction)
}
[no_predicates_numeric_generic_poseidon] Circuit output: [0x0f319258a1a8e85324d818a86f6b9e843601bf5fc0c16a5f6373ad1079d61bf4, 0x00, 0x252875d79a57f3835f452548af60c7beee6ac01a1c36bb6aec7ce6d069011acc]
